--- a/SnakeAI.WinForms/Properties/Resources.resx
+++ b/SnakeAI.WinForms/Properties/Resources.resx
@@ -133,5 +133,7 @@
   <data name="22285-snake-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\22285-snake-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="agencyfb_bold" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\agencyfb-bold.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
